fix info spacing by adding a separate class to target that section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -109,12 +109,16 @@ border-style: none;
 
 
 /* about us section */
-
+.benefit {
+display: flex;
+justify-content: space-between;
+}
 
 .info {
   width: 35%;
   margin-right: 5%;
   margin-bottom: 4rem;
+  flex-direction: column;
 }
 
 .title {
